支持视频录制。

--- a/app/src/main/res/layout/activity_texture_camera.xml
+++ b/app/src/main/res/layout/activity_texture_camera.xml
@@ -7,7 +7,7 @@
         android:background="#000000"
         tools:context=".CameraActivity">
 
-    <SurfaceView
+    <TextureView
             android:id="@+id/surface_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
